CORS issue fix  and mongo db issue fix